{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "b0f230f4-2a00-4b82-8d51-f435c5ff4f14",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "18251e61-b517-4cb7-8c79-750f0f5feb7b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "6b4c535d-b9b0-462a-b026-6a8b101f7d09",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ShootBullet",
                    "type": "Value",
                    "id": "d650c9c0-95fc-4902-9704-fc7871e0def4",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ShootLaser",
                    "type": "Button",
                    "id": "11ad69d9-32db-417d-ba71-8d3d6459ceff",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e95ec0a0-0377-40ef-8776-590256c9f1a4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "280463e0-370d-4363-915e-e34f4c421c6b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "2ddce2ca-1830-45ae-8398-70fe01beb0b8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f559661a-1373-46e8-a7f8-d0ed15214a9e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a1f0310a-cb3f-41b9-b198-fce266603e2d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootBullet",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df388c03-8df0-479b-ab3e-ef5710f9fe91",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootLaser",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}